tests/slice_bad_range_oob.stderr
tests/slice_bad_range_oob.sl:4:17: error: SL2004: type mismatch
